--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -37,26 +37,29 @@ Notes:
 
 */
 
+div.svocommontoolbarmenu {
+	position: fixed !important;
+	bottom:0px !important;
+	left:0px !important;
+	width:100% !important;
+	height:30px !important;
+	background: url(../images/common.toolbar.menu_bg.gif) repeat-x bottom left !important;
+	z-index: 499999 !important;
+	font-family: Arial, Helvetica, sans-serif !important;
+}
+
 div.svocommontoolbarmenu a {
 	text-decoration:none;
 }
 
-div.svocommontoolbarmenu {
-	position: fixed ;
-	bottom:0px ;
-	left:0px ;
-	width:100% ;
-	height:30px ;
-	background: url(../images/common.toolbar.menu_bg.gif) repeat-x bottom left ;
-	z-index: 499999 ;
-}
-
 div.svocommontoolbarmenu ul.home {
+	position:relative !important;
 	height:30px ;
 	float:left ;
 }
 
 div.svocommontoolbarmenu ul.favorites {
+	position:relative !important;
 	height:30px ;
 	float:left ;
 	background: url(../images/common.toolbar.menu_darkbg.gif) repeat-x bottom left ;
@@ -213,7 +216,7 @@ div.svocommontoolbarmenu li#navSettings>a {
 
 div.svocommontoolbarmenu li#mainMenu ul.menu {
 	display: none;
-	position: absolute ;
+	position: absolute !important;
 	bottom:30px ;
 	height: auto ;
 	width: 260px ;
@@ -225,7 +228,7 @@ div.svocommontoolbarmenu li#mainMenu ul.menu {
 }
 
 div.svocommontoolbarmenu li#mainMenu div.subMenuWrapper {
-	position: absolute ;
+	position: absolute !important;
 	display: none;
 	background-color:#111 ;
 	-moz-border-radius-topright: 15px ;
