--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -593,44 +593,66 @@ td.administration li a {
 }
 
 td.administration li.add {
-	background: url(../images/icons/add_24.png) no-repeat;
+	background: url(../../images/actionIcons14/add.png) no-repeat;
+}
+td.administration li.addOff {
+	background: url(../../images/actionIcons14/addOff.png) no-repeat;
 }
 td.administration li.config {
-	background: url(../images/icons/apps_24.png) no-repeat;
+	background: url(../../images/actionIcons14/config.png) no-repeat;
 }
 td.administration li.delete {
-	background: url(../images/icons/remov_24.png) no-repeat;
+	background: url(../../images/actionIcons14/delete.png) no-repeat;
+	margin-right: 0;
+}
+td.administration li.deleteOff {
+	background: url(../../images/actionIcons14/deleteOff.png) no-repeat;
 	margin-right: 0;
 }
 td.administration li.detail {
-	background: url(../images/icons/srch_24.png) no-repeat;
+	background: url(../../images/actionIcons14/detail.png) no-repeat;
 }
 td.administration li.download {
-	background: url(../images/icons/save_24.png) no-repeat;
+	background: url(../../images/actionIcons14/download.png) no-repeat;
 }
 td.administration li.edit {
-	background: url(../images/icons/edit_24.png) no-repeat;
+	background: url(../../images/actionIcons14/edit.png) no-repeat;
+}
+td.administration li.editOff {
+	background: url(../../images/actionIcons14/editOff.png) no-repeat;
 }
 td.administration li.move {
-	background: url(../images/icons/move_24.png) no-repeat;
+	background: url(../../images/actionIcons14/move.png) no-repeat;
+}
+td.administration li.moveOff {
+	background: url(../../images/actionIcons14/moveOff.png) no-repeat;
 }
 td.administration li.preview {
-	background: url(../images/icons/opnbr_24.png) no-repeat;
+	background: url(../../images/actionIcons14/preview.png) no-repeat;
 }
 td.administration li.permission {
-	background: url(../images/icons/group_24.png) no-repeat;
+	background: url(../../images/actionIcons14/permission.png) no-repeat;
+}
+td.administration li.permissionOff {
+	background: url(../../images/actionIcons14/permissionOff.png) no-repeat;
 }
 td.administration li.report {
-	background: url(../images/icons/chart_24.png) no-repeat;
+	background: url(../../images/actionIcons14/report.png) no-repeat;
 }
 td.administration li.rss {
-	background: url(../images/icons/rss_14.png) no-repeat;
+	background: url(../../images/actionIcons14/rss.png) no-repeat;
 }
 td.administration li.source {
-	background: url(../images/icons/notep_24.png) no-repeat;
+	background: url(../../images/actionIcons14/source.png) no-repeat;
 }
-td.administration li.version {
-	background: url(../images/icons/hist_24.png) no-repeat;
+td.administration li.sourceOff {
+	background: url(../../images/actionIcons14/source.png) no-repeat;
+}
+td.administration li.history {
+	background: url(../../images/actionIcons14/history.png) no-repeat;
+}
+td.administration li.historyOff {
+	background: url(../../images/actionIcons14/historyOff.png) no-repeat;
 }
 
 
