--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -16,10 +16,6 @@
 body,ul,ol,li,h1,h2,h3,h4,h5,h6,form,dl,dt,dd,p,div,address,blockquote,pre,fieldset {
 	margin: 0;
 	padding: 0;
-}
-
-body {
-	background-image:none;
 	font-size: 11px; 
 	font-family:"Lucida Grande", Helvetica, Arial, sans-serif !important;
 }
@@ -42,6 +38,11 @@ div#header {
 
 div#admincontainer {
 	margin: 5px 20px 60px;
+}
+
+.multiselect {
+	width: 600px;
+	height: 300px;
 }
 
 .ui-widget-content a  {
