--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -728,18 +728,19 @@ td.administration li.historyOff {
 	background: none;
 }
 
-.error, .notice, .success { padding: .8em !important; margin-bottom: 1em !important; border: 2px solid #ddd; }
+div.error, label.error {
+	padding: .8em !important;
+	margin-bottom: 1em !important;
+	background: #FBE3E4;
+	color: #8a1f11;
+	border-color: #FBC2C4;
+}
 
-#tabBundles .error,#tabBundles .notice,#tabBundles .success { 
-margin: .5em 0; }
+div.error a { color: #8a1f11; }
 
-.error { background: #FBE3E4; color: #8a1f11; border-color: #FBC2C4; }
-.notice { background: #FFF6BF; color: #514721; border-color: #FFD324; }
-.success { background: #E6EFC2; color: #264409; border-color: #C6D880; }
-.error a { color: #8a1f11; }
-.notice a { color: #514721; }
-.success a { color: #264409; }
-
+.error {
+	border: 2px solid #FBC2C4;
+}
 
 a.tooltip {
 	position: relative;
